# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

option('NANOARROW_BUILD_TESTS', type: 'boolean', description: 'Build tests', value: false)
option('NANOARROW_BUILD_BENCHMARKS', type: 'boolean', description: 'Build benchmarks', value: false)
option('NANOARROW_BUILD_INTEGRATION_TESTS', type: 'boolean',
       description: 'Build cross-implementation Arrow integration tests',
       value: false)
option('NANOARROW_BUNDLE', type: 'boolean',
       description: 'Create bundled nanoarrow.h and nanoarrow.c',
       value: false)
option('NANOARROW_BUNDLE_AS_CPP', type: 'boolean',
       description: 'Create bundled nanoarrow.h and nanoarrow.cc',
       value: false)
option('NANOARROW_NAMESPACE', type: 'string',
       description: 'A prefix for exported symbols')
option('NANOARROW_CODE_COVERAGE', type: 'boolean',
       description: 'Enable coverage reporting',
       value: false)
