option('NANOARROW_BUILD_TESTS', type: 'boolean', description: 'Build tests', value: false)
option('NANOARROW_BUILD_BENCHMARKS', type: 'boolean', description: 'Build benchmarks', value: false)
option('NANOARROW_BUILD_INTEGRATION_TESTS', type: 'boolean',
       description: 'Build cross-implementation Arrow integration tests',
       value: false)
option('NANOARROW_BUNDLE', type: 'boolean',
       description: 'Create bundled nanoarrow.h and nanoarrow.c',
       value: false)
option('NANOARROW_BUNDLE_AS_CPP', type: 'boolean',
       description: 'Create bundled nanoarrow.h and nanoarrow.cc',
       value: false)
option('NANOARROW_NAMESPACE', type: 'string',
       description: 'A prefix for exported symbols')
option('NANOARROW_ARROW_STATIC', type: 'boolean',
       description: 'Use a statically-linked Arrow C++ build when linking tests',
       value: false)
option('NANOARROW_CODE_COVERAGE', type: 'boolean',
       description: 'Enable coverage reporting',
       value: false)
