# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

option('tests', type: 'feature', description: 'Build tests')
option('tests_with_arrow', type: 'feature', description: 'Build tests with Arrow')
option('benchmarks', type: 'feature', description: 'Build benchmarks')
option('apps', type: 'feature', description: 'Build utility applications')
option('ipc', type: 'feature', description: 'Build IPC libraries')
option('ipc_with_zstd', type: 'feature', description: 'Build IPC libraries with ZSTD compression support')
option(
    'integration_tests', type: 'feature',
    description: 'Build cross-implementation Arrow integration tests',
)
option('namespace', type: 'string',
       description: 'A prefix for exported symbols')
option('device', type: 'feature', description: 'Build device libraries')
option('testing', type: 'feature', description: 'Build testing libraries')
option('metal', type: 'feature', description: 'Build Apple metal libraries')
option('cuda', type: 'feature', description: 'Build CUDA libraries')
